--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 # Environment Configuration
-VITE_API_BASE_URL=http://localhost:1337
+VITE_API_BASE_URL=http://localhost:1337/api
 VITE_API_TOKEN=your-long-lived-jwt-token
 VITE_APP_DOMAIN=http://localhost:3000
+
+# Environment identifier
+VITE_APP_ENV=development
 
 # Optional Analytics
 VITE_ANALYTICS_ID=
