--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ out/
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+.env.staging
 !.env.example
 
 # Logs
@@ -144,3 +146,6 @@ src/**/*.css.d.ts
 # Backup files
 *.backup
 *.bak
+.env.production
+.env.staging
+test-api.js 
