--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Environment Configuration
-VITE_API_BASE_URL=http://localhost:1337/api
+VITE_API_BASE_URL=http://localhost:1337
 VITE_API_TOKEN=your-long-lived-jwt-token
 VITE_APP_DOMAIN=http://localhost:3000
 
