--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "jsdom": "^27.0.0",
     "postcss": "^8.4.40",
     "storybook": "^8.2.8",
     "tailwindcss": "^3.4.7",
